--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MFA_TicTacToe Command Line Game",
   "main": "tic.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "game": "node tic.js"
   },
   "repository": {
     "type": "git",
